...
	<string name="read_access_control_group">Read Access Control Group:</string>
	<string name="select_view">Select View</string>
	<string name="spreadsheet">Spreadsheet</string>
	<string name="error_while_changing_group_by_columns">Error while changing group by columns</string>
	<string name="error_while_changing_sort_column">Error while changing sort column</string>
	<string name="error_while_changing_index_column">Error while changing index column</string>
	<string name="list">List</string>
	<string name="graph">Graph</string>
	<string name="map">Map</string>
	<string name="preferred_view_type">Preferred View Type</string>
	<string name="sms_shortcut_name">Shortcut Name</string>
	<string name="sms_shortcut_input">Shortcut Input</string>
	<string name="sms_shortcut_output">Shortcut Output</string>
...
	<string name="change_font_size">Change Font Size</string>
	<string name="display_prefs_for">Display Preferences for: %1$s</string>
	<string name="sort_column">Sort Column</string>
	<string name="sort_asc_desc">Sort Order</string>
	<string name="group_by_column">Group By Column</string>
	<string name="edit_rule">Edit Rule</string>
	<string name="compared_to_value">target comparison value</string>
	<string name="error_in_use_list_view_name">List view name %1$s is already in use!</string>
	<string name="add_list_view">Add New List View</string>
	<string name="nth_list_view_title">List View %1$d</string>
	<string name="delete_list_view">Delete this List View</string>
	<string name="edit_list_view">Edit this List View</string>
	<string name="confirm_delete_view_title">Confirm Delete List View</string>
...
	<string name="status_column">Status Column</string>
	<string name="color_rule_title_for">Color Rules for %1$s</string>
	<string name="row_color_rule_title_for">Row Color Rules for %1$s</string>
	<string name="map_list_view_file">Map List View File</string>
	<string name="confirm_delete_color_rule">Confirm Delete Color Rule</string>
	<string name="are_you_sure_delete_color_rule">Please confirm deletion of color rule: %1$s</string>
	<string name="delete_color_rule">Delete this Color Rule</string>
	<string name="edit_color_rule">Edit this Color Rule</string>
	<string name="access_control_settings">Access Control Settings</string>
	<string name="none">None</string>
	<string name="manage_table_property_sets">Manage Table Property Sets</string>
	<string name="restore_defaults">Restore Defaults</string>
	<string name="save_to_defaults">Save Current to Defaults</string>
...
