<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_web_view_activity_table_manager"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="always"
        android:title="@string/table_manager_title" />

</menu>

