...
	                android:title="@string/map" />
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/top_level_table_menu_table_properties"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/preferences"
        android:showAsAction="always" />
            

</menu>
...
